# studysetu

./: .env.example  .gitignore  CLAUDE.md  README.md
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/app/: main.py
apps/api/app/ai/: __init__.py  gateway.py
apps/api/app/ai/providers/: __init__.py  cerebras.py  claude.py  deepseek.py  gemini.py  groq.py
apps/api/app/core/: config.py  db.py  logging.py  security.py
apps/api/app/modules/: analytics.py  assessment.py  assignments.py  auth.py  curriculum.py  doubts.py  explore.py  institutions.py  learning.py  mastery.py  mentor.py  pools.py  timeline.py
apps/api/app/storage/: __init__.py  local.py
apps/api/tests/: test_ai_gateway.py  test_analytics.py  test_assessment.py  test_auth.py  test_curriculum.py  test_doubts.py  test_health.py  test_institutions.py  test_learning.py  test_m4_audit.py  test_mastery.py  test_pools.py
config/: README.md  ai.yaml  analytics.yaml  app.yaml  auth.yaml  cache.yaml  database.yaml  deployment.yaml  email.yaml  logging.yaml  ocr.yaml  offline.yaml  security.yaml  storage.yaml
docs/: ARCHITECTURE.md  BRANDING.md  CONFIG.md  CONTENT_SPEC.md  DATABASE.md  DEMO_RUNBOOK.md  DEPLOYMENT.md  DESIGN.md  DEVELOPMENT_GUIDE.md  FEATURE_EXPLANATION.md  INFRA_SETUP_GUIDE.md  MEMORY.md  PRD.md  PROMPTS.md  ROADMAP.md  RULES.md  SETUP_STEPS.md
e2e/: README.md  auth_roles.spec.ts  curriculum_crud.spec.ts  diagnostic_flow.spec.ts  institution_people.spec.ts  learning_session.spec.ts  package.json  playwright.config.ts  pnpm-lock.yaml  teacher_analytics.spec.ts
infra/: Caddyfile  (+5 more)
(+97 files in other folders)
