[project]
name = "studysetu-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115", "uvicorn[standard]>=0.30", "pydantic>=2.8", "pydantic-settings>=2.4",
  "sqlalchemy[asyncio]>=2.0", "asyncpg>=0.29", "python-jose[cryptography]>=3.3", "bcrypt>=4.1",
  "httpx>=0.27", "pyyaml>=6.0", "loguru>=0.7", "sentry-sdk[fastapi]>=2.0",
  "pypdf>=4.0", "python-multipart>=0.0.9",
]
[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.5", "mypy>=1.10"]
[tool.ruff]
line-length = 110
[tool.pytest.ini_options]
pythonpath = ["."]
